--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <section>
         <h1>shadowsocks-go</h1>
 
-<p>shadowsocks-go 是一个轻量级的隧道代理，用来穿透防火墙。它是 <a href="https://github.com/clowwindy/shadowsocks">shadowsocks</a> 的一个分支.</p>
+<p>shadowsocks-go 是一个轻量级的隧道代理，用来穿透防火墙。它是 <a href="https://github.com/clowwindy/shadowsocks">shadowsocks</a> 的一个分支，两者协议兼容（都升级到最新版本）。</p>
 
-<p>shadowsocks-go 与 shadowsocks 协议兼容。（两者都升级到最新版本的情况下。）</p>
+<p>注意 <strong>shadowsocks-go 必须有独立的服务器才可使用</strong>。</p>
 
 <h1>安装</h1>
 
@@ -56,7 +56,7 @@
 
 <p>客户端和服务器端默认在当前目录下寻找 <code>config.json</code> 配置文件。可以使用 <code>-c</code> 选项指定其他配置文件。</p>
 
-<p>配置文件使用 json，跟 <a href="https://github.com/clowwindy/shadowsocks-nodejs/">shadowsocks-nodejs</a> 的配置兼容。你可以下载配置样例 <a href="https://github.com/shadowsocks/shadowsocks-go/blob/master/config.json"><code>config.json</code></a>, 然后修改以下选项:</p>
+<p>配置文件使用 json，跟 <a href="https://github.com/clowwindy/shadowsocks-nodejs/">shadowsocks-nodejs</a> 的配置兼容。您可下载配置样例 <a href="https://github.com/shadowsocks/shadowsocks-go/blob/master/config.json"><code>config.json</code></a>, 然后修改以下选项:</p>
 
 <pre><code>server          服务器 ip 或者 host name
 server_port     服务器监听的端口
@@ -67,7 +67,7 @@ timeout         服务器端选项，以秒为单位
 
 <p>服务器上执行 <code>shadowsocks-server &amp;</code> 即可。</p>
 
-<p>客户机器上执行 <code>shadowsocks-local</code>，修改浏览器代理为 SOCKS5 代理。</p>
+<p>客户机器上执行 <code>shadowsocks-local &amp;</code>，修改浏览器代理为 SOCKS5 代理。</p>
 
 <pre><code>SOCKS5 127.0.0.1:local_port
 </code></pre>
@@ -101,7 +101,7 @@ cache_enctable  缓存密码表加速服务器程序启动
 
 <p>配置文件例子 <a href="https://github.com/shadowsocks/shadowsocks-go/blob/master/sample-config/server-multi-port.json"><code>server-multi-port.json</code></a>。如果有 <code>port_password</code>，服务器会忽略 <code>server_port</code> 和 <code>password</code> 选项。</p>
 
-<p>如果有超过 20 个不同的密码，推荐开启 <code>cache_enctable</code> 选项。不再使用的密码不会被删除，如果 <code>table.cache</code> 变得太大，手动删除即可。</p>
+<p>如果有超过 20 个不同的密码，推荐开启 <code>cache_enctable</code> 选项。不再使用的密码不会被删除，如果 <code>table.cache</code> 文件变得太大，手动删除即可。</p>
 
 <h3>在线更新密码</h3>
 
