--- a/index.html
+++ b/index.html
@@ -42,14 +42,10 @@
 
 <p>如果你安装了 Go，也可以从源码安装：</p>
 
-<p>在服务器上执行</p>
-
-<pre><code>go get github.com/shadowsocks/shadowsocks-go/cmd/shadowsocks-server
-</code></pre>
-
-<p>客户机器上执行</p>
-
-<pre><code>go get github.com/shadowsocks/shadowsocks-go/cmd/shadowsocks-local
+<pre><code># 服务器
+go get github.com/shadowsocks/shadowsocks-go/cmd/shadowsocks-server
+# 客户端
+go get github.com/shadowsocks/shadowsocks-go/cmd/shadowsocks-local
 </code></pre>
 
 <h1>使用方法</h1>
@@ -61,7 +57,8 @@
 <pre><code>server          服务器 ip 或者 host name
 server_port     服务器监听的端口
 local_port      客户端本地 socks5 代理端口
-password        由于加密传输的密码
+method          加密方法，默认 null，可以指定为 rc4
+password        用于加密传输的密码
 timeout         服务器端选项，以秒为单位
 </code></pre>
 
@@ -74,10 +71,10 @@ timeout         服务器端选项，以秒为单位
 
 <h2>命令行选项</h2>
 
-<p>命令行选项比配置文件中的选项有更高优先级。</p>
+<p>命令行选项比配置文件中的选项有更高优先级。使用 <code>-h</code> 选项来查看所有支持的选项。</p>
 
-<pre><code>shadowsocks-local -s server_name -p server_port -l local_port -k password -c config.json
-shadowsocks-server -p server_port -k password -t timeout -c config.json
+<pre><code>shadowsocks-local -s server_name -p server_port -l local_port -k password -m rc4 -c config.json
+shadowsocks-server -p server_port -k password -t timeout -m rc4 -c config.json
 </code></pre>
 
 <p><code>-d</code> 选项可以开启 debug 信息。</p>
@@ -96,16 +93,19 @@ shadowsocks-server -p server_port -k password -t timeout -c config.json
 <p>服务器支持使用不同密码的多个用户，每个用户使用一个独立的端口。在服务器上使用下列选项来支持多用户：</p>
 
 <pre><code>port_password   指定要监听的端口和对应的密码
-cache_enctable  缓存密码表加速服务器程序启动
 </code></pre>
 
 <p>配置文件例子 <a href="https://github.com/shadowsocks/shadowsocks-go/blob/master/sample-config/server-multi-port.json"><code>server-multi-port.json</code></a>。如果有 <code>port_password</code>，服务器会忽略 <code>server_port</code> 和 <code>password</code> 选项。</p>
 
-<p>如果有超过 20 个不同的密码，推荐开启 <code>cache_enctable</code> 选项。不再使用的密码不会被删除，如果 <code>table.cache</code> 文件变得太大，手动删除即可。</p>
-
 <h3>在线更新密码</h3>
 
 <p>编辑用来启动服务器的配置文件，然后向服务器进程发 <code>SIGHUP</code> 信号即可。</p>
+
+<h1>OpenVZ 用户特别注意</h1>
+
+<p><strong>请使用支持 vswap 的 OpenVZ 虚拟机</strong>，否则系统会错误的过多统计 shadowsocks-go 使用的内存。在支持 vswap OpenVZ 虚拟机上 shadowsocks-go 启动后占用约 3MB 内存。</p>
+
+<p>如果无法使用 vswap 而且内存占用存在问题，请考虑使用 <a href="https://github.com/dndx/shadowsocks-libuv">shadowsocks-libuv</a>。</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
