Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <h1>安装</h1>
 
-<p><a href="http://code.google.com/p/shadowsocks-go/downloads/list">google code</a> 上可以下载编译好的可执行文件。</p>
+<p>访问<a href="http://dl.chenyufei.info/shadowsocks">这个网页</a>可以下载编译好的可执行文件。</p>
 
 <p>如果你安装了 Go，也可以从源码安装：</p>
 
